fix image sizes on mobile

--- a/css/style_overides.css
+++ b/css/style_overides.css
@@ -305,36 +305,30 @@ img{
 	font-size: 14px;
 } */
 .project-images .source-mobile{
-	background: #fff url(../image/source-mobile.svg) no-repeat;
+	background: #EEEEEF url(../image/source-mobile.svg) no-repeat;
 	background-clip: content-box;
 	background-size: cover;
 	height: 660px; 
 	margin-bottom: 40px;
 }
 .project-images .source-desktop{
-	background: #fff url(../image/source-desktop.svg) no-repeat;
+	background: #EEEEEF url(../image/source-desktop.svg) no-repeat;
 	background-clip: content-box;
 	background-size: cover;
 	height: 660px; 
 }
 .project-images .patient-buddy-screens{
-	background: #fff url(../image/patient-buddy-screens.svg) no-repeat;
+	background: #EEEEEF url(../image/patient-buddy-screens.svg) no-repeat;
 	background-clip: content-box;
 	background-size: cover;
 	height: 660px;
 	margin-bottom: 40px;
 }
 .project-images .patient-buddy-hero-images{
-	background: #fff url(../image/patient-buddy-hero-images.svg) no-repeat center;
+	background: #EEEEEF url(../image/patient-buddy-hero-images.svg) no-repeat center;
 	background-clip: content-box;
 	background-size: cover;
 	height: 660px;
-}
-.project-images .patientbuddy{
-	background: #fff url(../image/patientbuddy.png) no-repeat;
-	background-clip: content-box;
-	background-size: cover;
-	height: 500px;
 }
 
 iframe{
@@ -387,70 +381,36 @@ iframe{
 	.navbar-default .navbar-nav>li>a{
 		padding-left: 0;
 	}
+	.navbar-default{
+		margin-top: 23px;
+	}
+	.project-images .source-desktop{
+		background: #EEEEEF url(../image/source-desktop.svg) no-repeat;
+		background-clip: content-box;
+		background-size: contain;
+		height: 220px;
+
+	}
+	.project-images .patient-buddy-screens{
+		background: #EEEEEF url(../image/patient-buddy-screens.svg) no-repeat;
+		background-clip: content-box;
+		background-size: contain;
+		height: 220px;
+	}
+	.project-images .patient-buddy-hero-images{
+		background: #EEEEEF url(../image/patient-buddy-hero-images.svg) no-repeat center;
+		background-clip: content-box;
+		background-size: contain;
+		height: 220px;
+
+	}
+	.project-images .source-mobile{
+		background: #EEEEEF url(../image/source-mobile.svg) no-repeat;
+		background-clip: content-box;
+		background-size: contain;
+		height: 220px;
+	}
+	
 }
-
-/*	.navbar-default{
-		margin-top: 3px;
-	}
-	.col-xs-5 {
-		padding-left: 20px;
-	}
-	.col-xs-7{
-		padding-right: 18px;
-	}
-	.col-xs-12 {
-		padding-left: 20px;
-		padding-right: 12px;
-	}
-	.margin-top-60{
-		margin-top: 56px;
-	}
-	.margin-top-100{
-		margin-top: 58px;
-	}
-	.patientbuddy-section{
-		margin-top: 57px;
-	}
-	.margin-bottom-150{
-		margin-bottom: 89px;
-	}
-	.footer hr{
-		margin-left: 20px;
-		margin-right: 12px;
-		margin-bottom: 22px;
-	}
-	.project-description h2{
-		margin-top: 20px;
-	}
-
-	.project-images .patientbuddy{
-		background: #fff url(../image/patientbuddy.png) no-repeat;
-		background-clip: content-box;
-		background-size: cover;
-		height: 499px;
-		width: 372px;
-	}
-	.project-images .source{
-		background: #fff url(../image/source.png) no-repeat;
-		background-clip: content-box;
-		background-size: cover;
-		height: 499px;
-		width: 372px; 
-	}
-	.project-images .glofox{
-		background: #fff url(../image/glofox.png) no-repeat;
-		background-clip: content-box;
-		background-size: cover;
-		width: 372px;
-	}
-	.project-images .storyful{
-		background: #fff url(../image/storyful.png) no-repeat;
-		background-clip: content-box;
-		background-size: cover;
-		width: 372px;
-		height: 418px;
-	}
-} */
-
 
 /* End of Mobile Styles */
